# ballistics-rs

./: Cargo.toml  LICENSE  README.md
src/: constants.rs  equations.rs  lib.rs
