[dependencies]
synonym = "0.1.5"
bon = "2.3.0"

[package]
name = "ballistics_rs"
version = "0.1.4"
authors = ["CM-IV"]
edition = "2021"
license = "MIT"
repository = "https://github.com/CM-IV/ballistics-rs"
description = "A Rust library for ballistics calculations"
documentation = "https://docs.rs/ballistics_rs"
homepage = "https://github.com/CM-IV/ballistics-rs"

# optimize for size
[profile.release]
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
